syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.practice";

package proto.profile;

message Profile {
  int32 age = 1;
  string first_name = 2;
  string last_name = 3;
  bytes small_picture = 4;
  bool is_profile_viewed = 5;
  float height = 6;
  repeated string phone_numbers = 7;
  enum EyeColor {
    UNKNOWN_EYE_COLOR = 0;
    BLACK = 1;
    BROWN = 2;
    GREEN = 3;
  }
  EyeColor eye_color = 8;
}